# student-info-CRUD

./: README.md  app.py  pyproject.toml  requirements.txt
config/: config.py  database.md
controllers/: student_controller.py
models/: student.py
services/: __init__.py  database.py  student_service.py
utils/: logger.py
