[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["sajad <fallahdoostsajad@gmal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
jdatetime = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
